# docs/swagger.json
@@ -127,7 +127,7 @@
                 }
             },
             "post": {
-                "description": "add a product to the cart",
+                "description": "update product items in the cart",
                 "consumes": [
                     "application/json"
                 ],
@@ -137,15 +137,15 @@
                 "tags": [
                     "carts"
                 ],
-                "summary": "Add a product to the cart",
+                "summary": "Update product items in the cart",
                 "parameters": [
                     {
-                        "description": "Add product to cart input",
+                        "description": "Update cart items input",
                         "name": "input",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.addProductToCartRequest"
+                            "$ref": "#/definitions/api.checkoutRequest"
                         }
                     }
                 ],
@@ -153,7 +153,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/gin.H"
+                            "$ref": "#/definitions/sqlc.Order"
                         }
                     },
                     "400": {
@@ -202,6 +202,66 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    }
+                }
+            }
+        },
+        "/orders": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "List orders of the current user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "orders"
+                ],
+                "summary": "List orders",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Offset",
+                        "name": "offset",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.listOrderResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/gin.H"
                         }
@@ -287,7 +347,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.createProductRequest"
+                            "$ref": "#/definitions/api.productRequest"
                         }
                     }
                 ],
@@ -356,6 +416,57 @@
                     }
                 }
             },
+            "put": {
+                "description": "update a product by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "products"
+                ],
+                "summary": "Update a product by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Product ID",
+                        "name": "product_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Product input",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.productRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.productResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "description": "remove a product by ID",
                 "consumes": [
@@ -368,6 +479,50 @@
                     "products"
                 ],
                 "summary": "Remove a product by ID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Product ID",
+                        "name": "product_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    }
+                }
+            }
+        },
+        "/products/{product_id}/upload-image": {
+            "post": {
+                "description": "upload a product image by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "products"
+                ],
+                "summary": "Upload a product image by ID",
                 "parameters": [
                     {
                         "type": "integer",
@@ -506,18 +661,18 @@
         "api.addProductToCartRequest": {
             "type": "object",
             "required": [
+                "cart_id",
                 "product_id",
-                "quantity",
-                "user_id"
+                "quantity"
             ],
             "properties": {
+                "cart_id": {
+                    "type": "integer"
+                },
                 "product_id": {
                     "type": "integer"
                 },
                 "quantity": {
-                    "type": "integer"
-                },
-                "user_id": {
                     "type": "integer"
                 }
             }
@@ -577,6 +732,25 @@
                 }
             }
         },
+        "api.checkoutRequest": {
+            "type": "object",
+            "required": [
+                "cart_id",
+                "is_cod",
+                "payment_type"
+            ],
+            "properties": {
+                "cart_id": {
+                    "type": "integer"
+                },
+                "is_cod": {
+                    "type": "boolean"
+                },
+                "payment_type": {
+                    "type": "string"
+                }
+            }
+        },
         "api.createCartRequest": {
             "type": "object",
             "required": [
@@ -584,33 +758,6 @@
             ],
             "properties": {
                 "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "api.createProductRequest": {
-            "type": "object",
-            "required": [
-                "description",
-                "name",
-                "price",
-                "sku",
-                "stock"
-            ],
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "price": {
-                    "type": "number"
-                },
-                "sku": {
-                    "type": "string"
-                },
-                "stock": {
                     "type": "integer"
                 }
             }
@@ -626,7 +773,8 @@
             "properties": {
                 "email": {
                     "type": "string",
-                    "maxLength": 255
+                    "maxLength": 255,
+                    "minLength": 6
                 },
                 "full_name": {
                     "type": "string",
@@ -683,6 +831,17 @@
                 }
             }
         },
+        "api.listOrderResponse": {
+            "type": "object",
+            "properties": {
+                "orders": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/sqlc.Order"
+                    }
+                }
+            }
+        },
         "api.loginResponse": {
             "type": "object",
             "properties": {
@@ -722,6 +881,37 @@
                     "type": "string",
                     "maxLength": 32,
                     "minLength": 3
+                }
+            }
+        },
+        "api.productRequest": {
+            "type": "object",
+            "required": [
+                "description",
+                "name",
+                "price",
+                "sku",
+                "stock"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string",
+                    "maxLength": 1000,
+                    "minLength": 10
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 100,
+                    "minLength": 3
+                },
+                "price": {
+                    "type": "number"
+                },
+                "sku": {
+                    "type": "string"
+                },
+                "stock": {
+                    "type": "integer"
                 }
             }
         },
@@ -797,22 +987,65 @@
             ],
             "properties": {
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 255,
+                    "minLength": 6
                 },
                 "full_name": {
-                    "type": "string"
+                    "type": "string",
+                    "maxLength": 32,
+                    "minLength": 3
                 },
                 "role": {
                     "$ref": "#/definitions/sqlc.UserRole"
                 },
                 "user_id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "minimum": 1
                 }
             }
         },
         "gin.H": {
             "type": "object",
             "additionalProperties": {}
+        },
+        "pgtype.InfinityModifier": {
+            "type": "integer",
+            "enum": [
+                1,
+                0,
+                -1
+            ],
+            "x-enum-varnames": [
+                "Infinity",
+                "Finite",
+                "NegativeInfinity"
+            ]
+        },
+        "pgtype.Int8": {
+            "type": "object",
+            "properties": {
+                "int64": {
+                    "type": "integer"
+                },
+                "valid": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "pgtype.Timestamptz": {
+            "type": "object",
+            "properties": {
+                "infinityModifier": {
+                    "$ref": "#/definitions/pgtype.InfinityModifier"
+                },
+                "time": {
+                    "type": "string"
+                },
+                "valid": {
+                    "type": "boolean"
+                }
+            }
         },
         "sqlc.CreateUserRow": {
             "type": "object",
@@ -845,6 +1078,90 @@
                     "type": "boolean"
                 }
             }
+        },
+        "sqlc.Order": {
+            "type": "object",
+            "properties": {
+                "cancelled_at": {
+                    "$ref": "#/definitions/pgtype.Timestamptz"
+                },
+                "confirmed_at": {
+                    "$ref": "#/definitions/pgtype.Timestamptz"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "delivered_at": {
+                    "$ref": "#/definitions/pgtype.Timestamptz"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "is_cod": {
+                    "type": "boolean"
+                },
+                "payment_status": {
+                    "$ref": "#/definitions/sqlc.PaymentStatus"
+                },
+                "payment_type": {
+                    "$ref": "#/definitions/sqlc.PaymentType"
+                },
+                "shipping_id": {
+                    "$ref": "#/definitions/pgtype.Int8"
+                },
+                "status": {
+                    "$ref": "#/definitions/sqlc.OrderStatus"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "sqlc.OrderStatus": {
+            "type": "string",
+            "enum": [
+                "wait_for_confirming",
+                "confirmed",
+                "delivering",
+                "delivered",
+                "cancelled",
+                "refunded",
+                "completed"
+            ],
+            "x-enum-varnames": [
+                "OrderStatusWaitForConfirming",
+                "OrderStatusConfirmed",
+                "OrderStatusDelivering",
+                "OrderStatusDelivered",
+                "OrderStatusCancelled",
+                "OrderStatusRefunded",
+                "OrderStatusCompleted"
+            ]
+        },
+        "sqlc.PaymentStatus": {
+            "type": "string",
+            "enum": [
+                "not_paid",
+                "paid"
+            ],
+            "x-enum-varnames": [
+                "PaymentStatusNotPaid",
+                "PaymentStatusPaid"
+            ]
+        },
+        "sqlc.PaymentType": {
+            "type": "string",
+            "enum": [
+                "cash",
+                "transfer"
+            ],
+            "x-enum-varnames": [
+                "PaymentTypeCash",
+                "PaymentTypeTransfer"
+            ]
         },
         "sqlc.UpdateUserRow": {
             "type": "object",
